--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
    <div class="aside">
      <p class="kei">
-       <img src="kei.jpg" alt="kei">
+       <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/inst.JPG?raw=true" alt="kei">
      </p>
      <p class="name">Kei Onodera<p>
        <p class="into">
