--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        </p>
        <p class="inst">
          <a href="https://www.instagram.com/kei_onodera1019/">
-           <img src="inst.jpg" alt="Kei Onodera">
+           <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/inst.JPG?raw=true" alt="Kei Onodera">
          </a>
        </p>
        <p>
@@ -38,7 +38,7 @@
        </p>
        <p class="nasu">
          <a href="https://nasublasen.com/">
-           <img src="nasu.jpg" alt="那須ブラーゼン">
+           <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/nasu.JPG?raw=true" alt="那須ブラーゼン">
          </a>
        </p>
        <p>
@@ -90,7 +90,7 @@
           専門家でない限りこの血管が<u>脚に血液を送るのに重要</u>な血管
           であるという理解で十分だと思います。
         </p>
-        <img src="doumyaku.jpg" alt="動脈">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/doumyaku.JPG?raw=true" alt="動脈">
         <p>
           線維化というのは、簡単に言えば血管の内腔の一部が,<u>細く硬く</u>なってしまう事のようです。
           実際に自分のエコーを見た際は、線維化している箇所が白く写り、収縮運動が弱くなっているのが分かりました。
@@ -113,7 +113,7 @@
         <p>
           次に、症状が出た時の足首の血圧差を見ていきます。
         </p>
-        <img src="60mmhg.jpg" alt="-60mmhg">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/60mmhg.JPG?raw=true" alt="-60mmhg">
         <p>
           写真は運動前と運動後の血圧差です。
           病院で正確に測った際は左右で100mmhg以上の差が出てしまいました。
@@ -151,9 +151,9 @@
         <p>等が挙げられます。</p>
         <p>チューブを血管に見立てたイメージ図です。</p>
 
-        <img src="seijyo.jpg" alt="正常">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/seijyo.JPG?raw=true" alt="正常">
 
-        <img src="ijyo.jpg" alt="異常">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/ijyo.JPG?raw=true" alt="異常">
 
         <p>これが血流が悪くなるイメージです。</p>
       </div>
@@ -178,7 +178,7 @@
           限界が来たら、素早く自転車を降り、靴と靴下をぬいで痛みの強いほうの脚の血圧を測ります。
           その後すぐに逆の脚も測ります。
         </p>
-        <img src="sokutei.jpg" alt="測定">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/sokutei.JPG?raw=true" alt="測定">
 
         <p>
           うちくるぶしとかかとの間に脈があるので、そこにセンサーを合わせます。
@@ -218,9 +218,9 @@
           検査はエアロフォームを取ると外的な要因で変化しやすく、比較が難しいので以下はエアロフォームを取らずに検査を行いました。
         </p>
         <div class="contents-item">
-          <img src="250w.png" alt="resalt">
-          <img src="20m250w80r.jpg" alt="resalt">
-          <img src="360w.jpg" alt="resalt">
+          <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/250w.PNG?raw=true" alt="resalt">
+          <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/20m250w80r.JPG?raw=true" alt="resalt">
+          <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/360w.JPG?raw=true" alt="resalt">
         </div>
         <p>
           この様に、トルクをかけずに回転数を高くして行った20分250wとトルクをかけた20分250wで測定の結果が違うのは、
