--- a/index.html
+++ b/index.html
@@ -202,10 +202,6 @@
           前者の大動脈を切る手術はリスクが高い為、命に影響のないこの症状でこの手術を行うのは日本では難しいでしょう。
           たとえフランスに行って手術ができるとしても、自分にその価値があるかを考えなければならないので難しい判断になります。
         </p>
-        <p>
-          接骨院等での治療は前例がない為未知数ですが、治る可能性はあるかもしれません。
-          しかし時間がかかる為、元々トップにいた選手でない限り復帰は難しいでしょう。
-        </p>
       </div>
 
       <div class="contents">
@@ -242,7 +238,7 @@
           自然とモチベーションも低下してしまいました。
           自転車を嫌いになった訳ではないですが、トレーニングが苦痛に感じることもありました。
           このサイトを見て似たような症状の方は疑って見てください。
-          早めに発見して対応出来れば、もう少し変わるかもしれません。
+          早めに発見して対応出来れば、手術などをせずに治せるかもしれません。
         </p>
       </div>
     </div>
