--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           線維化というのは、簡単に言えば血管の内腔の一部が,<u>細く硬く</u>なってしまう事のようです。
           実際に自分のエコーを見た際は、線維化している箇所が白く写り、収縮運動が弱くなっているのが分かりました。
         </p>
-        <img src="senika.jpg" alt="線維化">
+        <img src="https://github.com/kei-onodera/kei-onodera.github.io/blob/master/senika.JPG?raw=true" alt="線維化">
       </div>
 
       <div class="contents">
