--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
          この記事を書いた小野寺　慶です。
          僕は現在、那須ブラーゼンというチームでプロロードレーサーとして活動しています。
          しかし、この記事で書いた病気を発症して今は活動を休止しています。
-         この記事を読んで、一人でも多くの人にこの病気について知って頂き、
+         僕がこの病気を知った時は調べても英語のサイトしかなく、理解するのに苦労しました。
+         日本では余り知られていない病気ですので、このサイトを見て一人でも多くの人にこの病気について知って頂き、
          この病気の研究が進む事を祈っています。
        </p>
        <p class="inst">
